--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -55,6 +55,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLConnection.cs" />
+    <Compile Include="_JONMSSQLSERVER_DB01DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>_JONMSSQLSERVER_DB01DataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -77,6 +83,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="_JONMSSQLSERVER_DB01DataSet.xsc">
+      <DependentUpon>_JONMSSQLSERVER_DB01DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="_JONMSSQLSERVER_DB01DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>_JONMSSQLSERVER_DB01DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="_JONMSSQLSERVER_DB01DataSet.xss">
+      <DependentUpon>_JONMSSQLSERVER_DB01DataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
